# louder-assignment

./: .gitignore  README.md
backend/: .env.example  README.md  main.py  models.py  pyproject.toml  settings.py
backend/db/: supabase.py
backend/services/: proposal_llm.py
frontend/: README.md  eslint.config.mjs  next.config.ts  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: event-concierge.tsx  history-sidebar.tsx  navbar.tsx  output-format.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  sidebar.tsx  textarea.tsx
frontend/lib/: types.ts
