[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "langchain-groq>=1.1.2",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.2",
]
